tests/fixtures/valid/exhaustive_match.surreal
// Valid: Exhaustive match

mod test {
    enum Option<T> {
        Some(T),
        None,
    }

    pub fn main() -> int {
        let opt = Option::Some(42);

        match opt {
            Option::Some(x) => x,
            Option::None => 0,
        }
    }
}
